--- a/scripts/prometheus-test-demo.yaml
+++ b/scripts/prometheus-test-demo.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         app: cloud-work
     spec:
+      imagePullSecrets:
+        - name: cn202002
+        - password: cn202002
       containers:
       - image: harbor.edu.cn/cn202002/cloud_work:{VERSION}
         name: cloud-work
