--- a/scripts/prometheus-test-demo.yaml
+++ b/scripts/prometheus-test-demo.yaml
@@ -19,6 +19,8 @@ spec:
       containers:
       - image: harbor.edu.cn/cn202002/cloud_work:{VERSION}
         name: cloud-work
+        ports:
+        - containerPort: 8998
 ---
 apiVersion: v1
 kind: Service
