--- a/scripts/prometheus-test-demo.yaml
+++ b/scripts/prometheus-test-demo.yaml
@@ -13,6 +13,12 @@ spec:
       app: cloud-work
   template:
     metadata:
+      metadata:
+        annotations:
+          prometheus.io/path: /actuator/prometheus
+          prometheus.io/port: "9090"
+          prometheus.io/scheme: http
+          prometheus.io/scrape: "true"
       labels:
         app: cloud-work
 
