--- a/scripts/prometheus-test-serviceMonitor.yaml
+++ b/scripts/prometheus-test-serviceMonitor.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     k8s-app: cloud-work
   name: cloud-work
-  namespace: monitoring
+  namespace: cn202002
 spec:
   endpoints:
   - interval: 30s
