--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=mshservice
 management.endpoints.web.exposure.include=prometheus,health,info,metrics
+management.metrics.tags.application=${spring.application.name}
 server.port=9090
